--- a/style.css
+++ b/style.css
@@ -1,48 +1,74 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #fafafa;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
+body{ 
+    margin: 0; 
+} 
+nav{ 
+    height: 80px; 
+    display: flex; 
+    align-items: center; 
+    border-bottom: 1px solid rgb(198, 198, 198); 
+    padding: 0 20%; 
+} 
+.avaBoxStory{
+    margin: 25px;
 }
-
-
-.container {
-    width: 600px;
-    margin-top: 20px;
+a{ 
+    display: flex; 
+    align-self: center; 
+    width: auto; 
+    font-size: 39px; 
+    margin-right: 65px;
+} 
+c{
+    display: flex; 
+    align-text: center; 
+    width: auto; 
+    font-size: 15px; 
 }
-
-
-.post {
-    background-color: #fff;
-    border: 1px solid #dbdbdb;
+#posts{ 
+    display: flex; 
+    justify-content: center; 
+} 
+#postsBox{ 
+    width: 40%; 
+     
+} 
+.img{ 
+    width: 100%; 
+} 
+.post{ 
+    font-size: 30px; 
+    border: 1px solid goldenrod; 
+    padding: 50px; 
+    margin: 30px 0; 
+} 
+.ava{ 
+    border: 1px solid black;
+    width: 50px; 
+    height: 50px; 
+    border-radius: 100%; 
+    margin-right: 20px; 
+} 
+.avaBox{ 
+    display: flex; 
+    align-items: center;
     margin-bottom: 20px;
-    border-radius: 3px;
-    overflow: hidden;
+} 
+.likes{ 
+    display: flex; 
+    align-items: center; 
+} 
+.like{ 
+    margin-right: 10px; 
 }
 
-
-.post img {
+.btn{ 
+    cursor: pointer; 
+}
+.com{
+    margin-bottom: 15px;
+}
+#comInput{
     width: 100%;
-    height: auto;
+    margin-top: 10px;
+    padding: 5px;
 }
-
-
-.post .description {
-    padding: 10px;
-}
-
-
-.post .actions {
-    display: flex;
-    justify-content: space-between;
-    padding: 10px;
-    border-top: 1px solid #dbdbdb;
-}
-
-
-.post .actions .likes{
-    cursor: pointer;
-}
-
